syntax = "proto3";

package org.hypertrace.span.processing.config.service.v1;

option java_multiple_files = true;

message SpanFilter {
  oneof span_filter_expression {
    LogicalSpanFilterExpression logical_span_filter = 1;
    RelationalSpanFilterExpression relational_span_filter = 2;
    UnarySpanFilterExpression unary_span_filter = 3;
  }
}

message LogicalSpanFilterExpression {
  LogicalOperator operator = 1;
  repeated SpanFilter operands = 2;
}

message UnarySpanFilterExpression {
  oneof left_operand {
    string span_attribute_key = 1;
    Field field = 2;
  }
  UnaryOperator operator = 3;
}

message RelationalSpanFilterExpression {
  oneof left_operand {
    string span_attribute_key = 1;
    Field field = 2;
  }
  RelationalOperator operator = 3;
  SpanFilterValue right_operand = 4;
}

message SpanFilterValue {
  oneof value {
    string string_value = 1;
    ListValue list_value = 2;
  }
}

message ListValue {
  repeated SpanFilterValue values = 1;
}

enum LogicalOperator {
  LOGICAL_OPERATOR_UNSPECIFIED = 0;
  LOGICAL_OPERATOR_AND = 1;
  LOGICAL_OPERATOR_OR = 2;
}

enum Field {
  FIELD_UNSPECIFIED = 0;
  FIELD_URL = 1;
  FIELD_SERVICE_NAME = 2;
  FIELD_ENVIRONMENT_NAME = 3;
  FIELD_URL_PATH = 4;
}

enum RelationalOperator {
  RELATIONAL_OPERATOR_UNSPECIFIED = 0;
  RELATIONAL_OPERATOR_EQUALS = 1;
  RELATIONAL_OPERATOR_NOT_EQUALS = 2;
  RELATIONAL_OPERATOR_CONTAINS = 3;
  RELATIONAL_OPERATOR_NOT_CONTAINS = 8;
  RELATIONAL_OPERATOR_STARTS_WITH = 4;
  RELATIONAL_OPERATOR_ENDS_WITH = 5;
  RELATIONAL_OPERATOR_REGEX_MATCH = 6;
  RELATIONAL_OPERATOR_IN = 7;
}

enum UnaryOperator {
  UNARY_OPERATOR_UNSPECIFIED = 0;
  UNARY_OPERATOR_EXISTS = 1;
  UNARY_OPERATOR_NOT_EXISTS = 2;
}
